# endolla_watcher

./: AGENTS.md  Dockerfile  LICENSE.md  README.md  about.html  charger_3713_11258.html  charger_3715_11316.html  charger_3715_12976.html  charger_3715_12977.html  charger_3715_12978.html  charger_3715_12979.html  charger_3715_12980.html  charger_3715_12981.html  charger_3715_12982.html  charger_3715_12983.html  charger_3715_12984.html  charger_3715_12985.html  charger_3715_12986.html  charger_3715_12987.html  charger_3715_12988.html  charger_3715_12989.html  charger_3715_12990.html  charger_3715_12991.html  charger_3715_12992.html  charger_3715_12993.html  charger_3715_12994.html  charger_3715_12995.html  charger_3715_12996.html  charger_3717_11402.html  charger_3717_11403.html  charger_3717_11404.html  charger_3717_12205.html  charger_3717_12206.html  charger_3717_12207.html  charger_3717_12208.html  charger_3717_12209.html  charger_3717_12210.html  charger_3717_12211.html  charger_3717_12212.html  charger_3717_12213.html  (+859 more)
argocd/: application.yaml
deploy/: README.md  backend-configmap.yaml  backend-deployment.yaml  backend-service.yaml  configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  mysql-secret.yaml  mysql-service.yaml  mysql-statefulset.yaml  namespace.yaml  pvc.yaml  secret.yaml
frontend/: 2025.css  Dockerfile  about.html  app.js  config.js  heatmap.html  index.html  location.html  locations.html  nearme.html  problematic.html  styles.css
scripts/: push_site.py  update_kustomize_image.py
tests/: conftest.py  test_api.py  test_charger_sessions.py  test_db_management.py  test_location_usage.py  test_parse_locations.py  test_rule_counts.py  test_station_fingerprint.py  test_stats.py  test_timeline.py  (+1 more)
(+15 files in other folders)
