[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endolla-watcher"
version = "0.1.0"
description = "Monitor Endolla dataset for underused chargers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
