[metadata]
name = endolla-watcher
version = 0.1.0
description = Monitor Endolla dataset for underused chargers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    requests>=2.0

[options.packages.find]
where = src
