[metadata]
name = endolla-watcher
version = 0.1.0
description = Monitor Endolla dataset for underused chargers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    fastapi>=0.110
    httpx>=0.27
    requests>=2.0
    uvicorn>=0.23
    pymysql>=1.1
    cryptography>=41

[options.packages.find]
where = src
